slower toggeling, fix bug that in screenshot part of panel are visible

--- a/visited/www/css/main.css
+++ b/visited/www/css/main.css
@@ -57,7 +57,7 @@
 
 #whatsapp, #facebook, #twitter, #instagram {
   margin-right:5px;
-  width: 50px;
+  width: 40px;
   border-radius: 10%;
 }
 
